src/objects/pse__Filter__c.object
<CustomObject>
    <description>Contains values that restrict the list of resources or projects displayed in the Resource or Project Planners. Filters are applied directly by the user on the filters panel.</description>
    <fields>
        <fullName>pse__Custom_Filter_Arguments__c</fullName>
        <label>Custom Filter Arguments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Custom_Filter_Handler__c</fullName>
        <label>Custom Filter Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Field__c</fullName>
        <inlineHelpText>The API name of the field this filter operates on.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Filter_Set_SObject__c</fullName>
        <formula>pse__Filter_Set__r.pse__SObject__c</formula>
        <label>Filter Set SObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Filter_Set__c</fullName>
        <label>Filter Set</label>
        <referenceTo>pse__Filter_Set__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If false this filter will be not be used evaluated.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>includes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>excludes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>within</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Value__c</fullName>
        <inlineHelpText>A JSON object that represents the value or values to compare with.</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <displayFormat>FIL-{000000}</displayFormat>
        <label>Filter Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>